--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
           - 5432:5432
         env:
           POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: your_password
+          POSTGRES_HOST_AUTH_METHOD: trust
           POSTGRES_DB: dw_blog_v3_test
         options: >-
           --health-cmd "pg_isready -U postgres"
