--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
           POSTGRES_DB: dw_blog_v3_test
           POSTGRES_HOST_AUTH_METHOD: trust
         options: >-
-          --health-cmd "pg_isready -U postgres"
+          --health-cmd "pg_isready -U dw_blog_v3"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
@@ -83,7 +83,7 @@ jobs:
       - name: Wait for PostgreSQL to be ready
         run: |
           for i in {1..30}; do
-            if pg_isready -h localhost -U postgres; then
+            if pg_isready -h localhost -U dw_blog_v3; then
               echo "PostgreSQL is ready"
               break
             fi
