--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,11 +62,11 @@ jobs:
         ports:
           - 5432:5432
         env:
-          POSTGRES_USER: dw_blog_v3
+          POSTGRES_USER: postgres
           POSTGRES_DB: dw_blog_v3_test
           POSTGRES_HOST_AUTH_METHOD: trust
         options: >-
-          --health-cmd "pg_isready -U dw_blog_v3"
+          --health-cmd "pg_isready -U postgres"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
@@ -83,7 +83,7 @@ jobs:
       - name: Wait for PostgreSQL to be ready
         run: |
           for i in {1..30}; do
-            if pg_isready -h localhost -U dw_blog_v3; then
+            if pg_isready -h localhost -U postgres; then
               echo "PostgreSQL is ready"
               break
             fi
@@ -98,4 +98,3 @@ jobs:
       - name: Run tests
         run: |
           bundle exec rspec
-
