--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       DATABASE_USERNAME: postgres
       DATABASE_PASSWORD: password
       DATABASE_NAME: dw_blog_v3_development
+    command: bash -c "rm -f /rails/tmp/pids/server.pid && bundle exec rails server -b 0.0.0.0"
 
 volumes:
   db_data:
